Closes #43, fix api-path-bug in frontend